--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
 <div id="footer">
 	<p>no copyright | Use this template!</p>
 </div>
+<a href="http://github.com/mojombo"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 </body>
 </html>
