--- a/index.html
+++ b/index.html
@@ -5,36 +5,20 @@
 <title>Xhtml & CSS Template Kit | CSS{QUIK}.com</title>
 <link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
 </head>
-<body class="default">
-<div id="header">
-	<h1 id="logo"><a href="http://cssquik.com">CSSQuik.com</a></h1>
+<body>
+<a href="https://github.com/michaelplant/CSS-Quik"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+<div id="container">
+	<div class="download"> <a href="https://github.com/michaelplant/CSS-Quik/zipball/master"> <img border="0" width="90" src="https://github.com/images/modules/download/zip.png"></a> <a href="https://github.com/michaelplant/CSS-Quik/tarball/master"> <img border="0" width="90" src="https://github.com/images/modules/download/tar.png"></a> </div>
+	<h1><a href="https://github.com/michaelplant/CSS-Quik">CSS-Quik</a> <span class="small">by <a href="https://github.com/michaelplant">michaelplant</a></span></h1>
+	<div class="description"> UI Starter Kit </div>
+	<h2>Contact</h2>
+	<p> (msplant@gmail.com) </p>
+	<h2>Download</h2>
+	<p> You can download this project in either <a href="https://github.com/michaelplant/CSS-Quik/zipball/master">zip</a> or <a href="https://github.com/michaelplant/CSS-Quik/tarball/master">tar formats. </p>
+	<p>You can also clone the project with <a href="http://git-scm.com">Git</a> by running:
+	<pre>$ git clone git://github.com/michaelplant/CSS-Quik</pre>
+	</p>
+	<div class="footer"> get the source code on GitHub : <a href="https://github.com/michaelplant/CSS-Quik">michaelplant/CSS-Quik</a> </div>
 </div>
-<div id="main-content">
-    <ul class="menu">
-    	<li><a href="index.html">One Column</a></li>
-    	<li><a href="two-column.html">Two Column</a></li>
-    	<li><a href="three-column.html">Three Column</a></li>
-    </ul>
-    <h1>Heading 1</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed orci est, consequat sit amet, tincidunt sed, vulputate sed, dolor. Fusce metus. Nullam eget nunc. Quisque auctor, ipsum sit amet venenatis aliquam, nisi erat consectetur tellus, id laoreet risus turpis nec tellus. Sed nunc sapien, cursus id, consequat at, volutpat eu, justo. Fusce at ipsum id nibh porttitor iaculis. Curabitur eget neque a lorem tempus faucibus. Ut lobortis fringilla justo. Cras accumsan lorem placerat sapien. Ut vehicula auctor felis. Curabitur augue orci, rhoncus quis, pellentesque eu, lobortis at, erat.</p>
-    <p>Pellentesque sit amet pede in felis rutrum tempus. Donec non ligula. Nam sit amet ipsum. Mauris commodo congue leo. Quisque ultricies posuere lacus. Nam odio. Vestibulum malesuada. Quisque in magna eu massa adipiscing ultricies. Vivamus viverra mauris non lorem. Nunc orci metus, fringilla sit amet, rutrum a, lobortis in, tellus.</p>
-    <h2>Heading 2</h2>
-    <ul>
-        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
-        <li>Vestibulum imperdiet placerat velit.</li>
-        <li>Sed euismod tortor sit amet nunc.</li>
-        <li>Vestibulum fringilla enim a tortor.</li>
-        <li>Curabitur convallis elit dignissim odio.</li>
-        <li>Pellentesque non justo vitae urna interdum tincidunt.</li>
-    </ul>
-    <h3>Heading 3</h3>
-    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nam eget velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse potenti. Etiam pellentesque magna ut est. Sed quis libero vel nunc laoreet accumsan. Vivamus diam orci, laoreet eu, pulvinar et, ultricies ac, sapien. Sed dapibus, augue quis adipiscing tincidunt, tellus turpis congue felis, a laoreet ligula massa ut nunc. In nunc. Curabitur vestibulum lobortis ligula. Maecenas varius urna vitae risus. Quisque mauris velit, venenatis eget, ultrices a, tristique tincidunt, lorem. Phasellus purus. Donec auctor. Morbi rutrum. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. In venenatis libero. Etiam fermentum, nulla nec imperdiet auctor, purus lacus convallis tortor, non pellentesque urna est nec felis.</p>
-    <h4>Heading 4</h4>
-    <p>Nam pellentesque, neque in ornare fermentum, lectus nibh mattis nunc, vitae pharetra felis sem in sem. Suspendisse fringilla ante sit amet ipsum feugiat tempus. Nam erat. Donec dignissim turpis vitae pede. Nulla ultrices, justo id vulputate imperdiet, mi quam imperdiet pede, et tempor tortor quam eu orci. Sed nec mauris. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in odio rutrum lectus commodo tincidunt. Praesent vulputate arcu et est. Curabitur eget felis vitae tellus iaculis elementum. Nunc laoreet pharetra ligula.</p>
-</div>
-<div id="footer">
-	<p>no copyright | Use this template!</p>
-</div>
-<a href="http://github.com/mojombo"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
 </body>
 </html>
