--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Xhtml & CSS Template Kit | CSS{QUIK}.com</title>
+<title>CSS Starter Kit | CSS-QUIK.com</title>
 <link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
 </head>
 
@@ -11,7 +11,7 @@
 <div id="container">
 	<div class="download"> <a href="https://github.com/michaelplant/CSS-Quik/zipball/master"> <img border="0" width="90" src="https://github.com/images/modules/download/zip.png"></a> <a href="https://github.com/michaelplant/CSS-Quik/tarball/master"> <img border="0" width="90" src="https://github.com/images/modules/download/tar.png"></a> </div>
 	<h1><a href="https://github.com/michaelplant/CSS-Quik">CSS-Quik</a> <span class="small">by <a href="https://github.com/michaelplant">michaelplant</a></span></h1>
-	<div class="description"> UI Starter Kit </div>
+	<div class="description"> CSS Starter Kit </div>
 	<h2>Contact</h2>
 	<p> (msplant@gmail.com) </p>
 	<h2>Download</h2>
